--- a/charts/argo-cd/templates/redis/pdb.yaml
+++ b/charts/argo-cd/templates/redis/pdb.yaml
@@ -1,24 +1,25 @@
-{{- if .Values.redis.pdb.enabled }}
+{{- $redisHa := index .Values "redis-ha" -}}
+{{- if and .Values.redis.enabled (not $redisHa.enabled) .Values.redis.pdb.enabled }}
 apiVersion: {{ include "argo-cd.apiVersion.pdb" . }}
 kind: PodDisruptionBudget
 metadata:
-  name: {{ template "argo-cd.redis.fullname" . }}
+  name: {{ include "argo-cd.redis.fullname" . }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.redis.name "name" .Values.redis.name) | nindent 4 }}
-  {{- with .Values.redis.pdb.labels }}
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
+    {{- with .Values.redis.pdb.labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
   {{- with .Values.redis.pdb.annotations }}
   annotations:
-    {{- toYaml . | nindent 4 }}
+    {{- range $key, $value := . }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
   {{- end }}
 spec:
-  {{- if .Values.redis.pdb.minAvailable }}
-  minAvailable: {{ .Values.redis.pdb.minAvailable }}
-  {{- else if .Values.redis.pdb.maxUnavailable }}
-  maxUnavailable: {{ .Values.redis.pdb.maxUnavailable }}
+  {{- with .Values.dex.pdb.maxUnavailable }}
+  maxUnavailable: {{ . }}
   {{- else }}
-  minAvailable: 0
+  minAvailable: {{ .Values.redis.pdb.minAvailable | default 0 }}
   {{- end }}
   selector:
     matchLabels:
