--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -44,6 +44,10 @@ global:
     tag: ""
     # -- If defined, a imagePullPolicy applied to all Argo CD deployments
     imagePullPolicy: IfNotPresent
+
+  # -- Secrets with credentials to pull images from a private registry
+  imagePullSecrets: []
+
   logging:
     # -- Set the global logging format. Either: `text` or `json`
     format: text
@@ -59,8 +63,6 @@ global:
   #  runAsGroup: 999
   #  fsGroup: 999
 
-  # -- If defined, uses a Secret to pull an image from a private Docker registry or repository
-  imagePullSecrets: []
   # -- Mapping between IP and hostnames that will be injected as entries in the pod's hosts files
   hostAliases: []
   # - ip: 10.20.30.40
@@ -374,6 +376,10 @@ controller:
     # @default -- `""` (defaults to global.image.imagePullPolicy)
     imagePullPolicy: ""
 
+  # -- Secrets with credentials to pull images from a private registry
+  # @default -- `[]` (defaults to global.imagePullSecrets)
+  imagePullSecrets: []
+
   # -- The number of application controller pods to run.
   # Additional replicas will cause sharding of managed clusters across number of replicas.
   replicas: 1
@@ -636,8 +642,6 @@ controller:
     # minAvailable: 1
     # maxUnavailable: 0
 
-  # -- Secrets with credentials to pull images from a private registry
-  imagePullSecrets: []
 
 ## Dex
 dex:
@@ -689,6 +693,11 @@ dex:
     # -- Dex imagePullPolicy
     # @default -- `""` (defaults to global.image.imagePullPolicy)
     imagePullPolicy: ""
+
+  # -- Secrets with credentials to pull images from a private registry
+  # @default -- `[]` (defaults to global.imagePullSecrets)
+  imagePullSecrets: []
+
   initImage:
     # -- Argo CD init image repository
     # @default -- `""` (defaults to global.image.repository)
@@ -844,9 +853,6 @@ dex:
     # minAvailable: 1
     # maxUnavailable: 0
 
-  # -- Secrets with credentials to pull images from a private registry
-  imagePullSecrets: []
-
 ## Redis
 redis:
   # -- Enable redis
@@ -861,6 +867,10 @@ redis:
     tag: 7.0.5-alpine
     # -- Redis imagePullPolicy
     imagePullPolicy: IfNotPresent
+
+  # -- Secrets with credentials to pull images from a private registry
+  # @default -- `[]` (defaults to global.imagePullSecrets)
+  imagePullSecrets: []
 
   # -- Additional command line arguments to pass to redis-server
   extraArgs: []
@@ -1035,9 +1045,6 @@ redis:
     # minAvailable: 1
     # maxUnavailable: 0
 
-  # -- Secrets with credentials to pull images from a private registry
-  imagePullSecrets: []
-
 # This key configures Redis-HA subchart and when enabled (redis-ha.enabled=true)
 # the custom redis deployment is omitted
 # Check the redis-ha chart for more properties
@@ -1143,6 +1150,10 @@ server:
     # -- Image pull policy for the Argo CD server
     # @default -- `""` (defaults to global.image.imagePullPolicy)
     imagePullPolicy: "" # IfNotPresent
+
+  # -- Secrets with credentials to pull images from a private registry
+  # @default -- `[]` (defaults to global.imagePullSecrets)
+  imagePullSecrets: []
 
   # -- Additional command line arguments to pass to Argo CD server
   extraArgs: []
@@ -1700,8 +1711,6 @@ server:
     # minAvailable: 1
     # maxUnavailable: 0
 
-  # -- Secrets with credentials to pull images from a private registry
-  imagePullSecrets: []
 
 ## Repo Server
 repoServer:
@@ -1748,6 +1757,10 @@ repoServer:
     # -- Image pull policy for the repo server
     # @default -- `""` (defaults to global.image.imagePullPolicy)
     imagePullPolicy: "" # IfNotPresent
+
+  # -- Secrets with credentials to pull images from a private registry
+  # @default -- `[]` (defaults to global.imagePullSecrets)
+  imagePullSecrets: []
 
   # -- Additional command line arguments to pass to repo server
   extraArgs: []
@@ -1978,9 +1991,6 @@ repoServer:
     # minAvailable: 1
     # maxUnavailable: 0
 
-  # -- Secrets with credentials to pull images from a private registry
-  imagePullSecrets: []
-
 applicationSet:
   # -- Enable Application Set controller
   enabled: true
@@ -2001,6 +2011,10 @@ applicationSet:
     # -- Image pull policy for the application set controller
     # @default -- `""` (defaults to global.image.imagePullPolicy)
     imagePullPolicy: ""
+
+  # -- If defined, uses a Secret to pull an image from a private Docker registry or repository.
+  # @default -- `[]` (defaults to global.imagePullSecrets)
+  imagePullSecrets: []
 
   args:
     # -- The default metric address
@@ -2060,9 +2074,6 @@ applicationSet:
       namespace: ""  # monitoring
       # -- Prometheus ServiceMonitor labels
       additionalLabels: {}
-
-  # -- If defined, uses a Secret to pull an image from a private Docker registry or repository.
-  imagePullSecrets: []
 
   ## Application set service configuration
   service:
@@ -2226,6 +2237,7 @@ notifications:
     imagePullPolicy: ""
 
   # -- Secrets with credentials to pull images from a private registry
+  # @default -- `[]` (defaults to global.imagePullSecrets)
   imagePullSecrets: []
 
   # -- [Node selector]
@@ -2663,6 +2675,7 @@ notifications:
         imagePullPolicy: ""
 
       # -- Secrets with credentials to pull images from a private registry
+      # @default -- `[]` (defaults to global.imagePullSecrets)
       imagePullSecrets: []
 
       service:
