--- a/.clomonitor.yml
+++ b/.clomonitor.yml
@@ -6,7 +6,7 @@ exemptions:
   - check: dependency_update_tool
     reason: "Helm deps are not currently scanned. Maintainers are watching developments to dependabot-core #2237" # Justification of this exemption (mandatory, it will be displayed on the UI)
   - check: sbom
-    rason: "Tracking Helm dependencies is not yet a stable practice."
+    reason: "Tracking Helm dependencies is not yet a stable practice."
 
 # TODO:
 # License scanning information
