feat(argocd-apps): Add ArgoCD ApplicationSet (#1521)
* Add ArgoCD ApplicationSet

Signed-off-by: toyamagu <toyamagu2021@gmail.com>
Signed-off-by: Petr Drastil <petr.drastil@gmail.com>
Co-authored-by: Petr Drastil <petr.drastil@gmail.com>

--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -59,10 +59,11 @@ jobs:
         if: steps.list-changed.outputs.changed == 'true'
         with:
           config: .github/configs/kind-config.yaml
-
+          
       - name: Deploy latest ArgoCD CRDs when testing ArgoCD extensions
         if: |
-          contains(steps.list-changed.outputs.changed_charts, 'argocd-image-updater')
+          contains(steps.list-changed.outputs.changed_charts, 'argocd-image-updater') ||
+          contains(steps.list-changed.outputs.changed_charts, 'argocd-apps')
         run: |
           helm repo add dandydeveloper https://dandydeveloper.github.io/charts/
           helm dependency build charts/argo-cd/
