--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -1713,11 +1713,14 @@ server:
   #    name: custom-tools
   #    subPath: helm
 
+  ## Argo UI extensions
+  ## This function in tech preview stage, do expect unstability or breaking changes in newer versions.
+  ## Ref: https://github.com/argoproj-labs/argocd-extensions
   extensions:
-    # -- Enable support for extensions
-    ## This function in tech preview stage, do expect unstability or breaking changes in newer versions. Bump image.tag if necessary.
+    # -- Enable support for Argo UI extensions
     enabled: false
 
+    ## Argo UI extensions image
     image:
       # -- Repository to use for extensions image
       repository: "ghcr.io/argoproj-labs/argocd-extensions"
@@ -1734,11 +1737,6 @@ server:
     #  requests:
     #    cpu: 10m
     #    memory: 64Mi
-
-    # -- Extensions to be loaded into the server
-    contents: []
-    # - name: argo-rollouts
-    #   url: https://github.com/argoproj-labs/rollout-extension/releases/download/v0.1.0/extension.tar
 
 ## Repo Server
 repoServer:
