chore(argo-cd): Remove controller duplicate service
Signed-off-by: Petr Drastil <petr.drastil@gmail.com>

--- a/charts/argo-cd/templates/argocd-application-controller/statefulset.yaml
+++ b/charts/argo-cd/templates/argocd-application-controller/statefulset.yaml
@@ -210,7 +210,7 @@ spec:
           {{- toYaml . | nindent 10 }}
         {{- end }}
         ports:
-        - name: controller
+        - name: metrics
           containerPort: {{ .Values.controller.containerPort }}
           protocol: TCP
         livenessProbe:
