--- a/charts/argo-cd/templates/argocd-server/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-server/deployment.yaml
@@ -84,7 +84,7 @@ spec:
                 name: argocd-cmd-params-cm
                 key: server.log.format
                 optional: true
-          - name: ARGOCD_REPO_SERVER_LOGLEVEL
+          - name: ARGOCD_SERVER_LOG_LEVEL
             valueFrom:
               configMapKeyRef:
                 name: argocd-cmd-params-cm
@@ -144,6 +144,18 @@ spec:
                 name: argocd-cmd-params-cm
                 key: server.repo.server.strict.tls
                 optional: true
+          - name: ARGOCD_SERVER_DEX_SERVER_PLAINTEXT
+            valueFrom:
+              configMapKeyRef:
+                name: argocd-cmd-params-cm
+                key: server.dex.server.plaintext
+                optional: true
+          - name: ARGOCD_SERVER_DEX_SERVER_STRICT_TLS
+            valueFrom:
+              configMapKeyRef:
+                name: argocd-cmd-params-cm
+                key: server.dex.server.strict.tls
+                optional: true
           - name: ARGOCD_TLS_MIN_VERSION
             valueFrom:
               configMapKeyRef:
@@ -198,6 +210,12 @@ spec:
                 name: argocd-cmd-params-cm
                 key: redis.server
                 optional: true
+          - name: REDIS_COMPRESSION
+            valueFrom:
+              configMapKeyRef:
+                name: argocd-cmd-params-cm
+                key: redis.compression
+                optional: true
           - name: REDISDB
             valueFrom:
               configMapKeyRef:
@@ -234,51 +252,50 @@ spec:
                 name: argocd-cmd-params-cm
                 key: otlp.address
                 optional: true
+          - name: ARGOCD_APPLICATION_NAMESPACES
+            valueFrom:
+              configMapKeyRef:
+                name: argocd-cmd-params-cm
+                key: application.namespaces
+                optional: true
         {{- with .Values.server.envFrom }}
         envFrom:
           {{- toYaml . | nindent 10 }}
         {{- end }}
         volumeMounts:
         {{- with .Values.server.volumeMounts }}
-          {{- toYaml . | nindent 8}}
+          {{- toYaml . | nindent 8 }}
         {{- end }}
-        {{- if .Values.server.extensions.enabled }}
-        - name: extensions
-          mountPath: /tmp/extensions/
-        {{- end }}
-        {{- if .Values.configs.knownHosts }}
         - mountPath: /app/config/ssh
           name: ssh-known-hosts
-        {{- end }}
         - mountPath: /app/config/tls
           name: tls-certs
         - mountPath: /app/config/server/tls
           name: argocd-repo-server-tls
-        {{- if .Values.configs.styles }}
-        - mountPath: "/shared/app/custom/custom.styles.css"
-          subPath: "custom.styles.css"
-          name: custom-styles
-        {{- end }}
-        {{- if .Values.server.containerSecurityContext.readOnlyRootFilesystem }}
-        - mountPath: /home/argocd/.aws
-          name: aws-config
-        {{- end }}
+        - mountPath: /app/config/dex/tls
+          name: argocd-dex-server-tls
         - mountPath: /home/argocd
           name: plugins-home
+        - mountPath: /home/argocd/.aws
+          name: aws-config
+        - mountPath: /shared/app/custom
+          name: styles
         - mountPath: /tmp
-          name: tmp-dir
+          name: tmp
+        {{- if .Values.server.extensions.enabled }}
+        - mountPath: /tmp/extensions
+          name: extensions
+        {{- end }}
         ports:
         - name: {{ .Values.server.name }}
           containerPort: {{ .Values.server.containerPort }}
           protocol: TCP
-        {{ if .Values.server.metrics.enabled }}
         - name: metrics
           containerPort: 8083
           protocol: TCP
-        {{- end }}
         livenessProbe:
           httpGet:
-            path: /healthz
+            path: /healthz?full=true
             port: {{ .Values.server.containerPort }}
           initialDelaySeconds: {{ .Values.server.livenessProbe.initialDelaySeconds }}
           periodSeconds: {{ .Values.server.livenessProbe.periodSeconds }}
@@ -347,31 +364,30 @@ spec:
       {{- with .Values.server.volumes }}
         {{- toYaml . | nindent 6}}
       {{- end }}
+      - name: aws-config
+        emptyDir: {}
       {{- if .Values.server.extensions.enabled }}
       - name: extensions
         emptyDir: {}
       {{- end }}
-      - emptyDir: {}
-        name: tmp-dir
-      {{- if .Values.server.containerSecurityContext.readOnlyRootFilesystem }}
-      - emptyDir: {}
-        name: aws-config
-      {{- end }}
-      {{- if .Values.configs.styles }}
-      - configMap:
-          name: argocd-custom-styles
-        name: custom-styles
-      {{- end }}
-      {{- if .Values.configs.knownHosts }}
-      - configMap:
+      - name: plugins-home
+        emptyDir: {}
+      - name: tmp
+        emptyDir: {}
+      - name: ssh-known-hosts
+        configMap:
           name: argocd-ssh-known-hosts-cm
-        name: ssh-known-hosts
-      {{- end }}
-      - configMap:
+      - name: tls-certs
+        configMap:
           name: argocd-tls-certs-cm
-        name: tls-certs
+      - name: styles
+        configMap:
+          name: argocd-styles-cm
+          optional: true
       - name: argocd-repo-server-tls
         secret:
+          secretName: argocd-repo-server-tls
+          optional: true
           items:
           - key: tls.crt
             path: tls.crt
@@ -379,10 +395,15 @@ spec:
             path: tls.key
           - key: ca.crt
             path: ca.crt
+      - name: argocd-dex-server-tls
+        secret:
+          secretName: argocd-dex-server-tls
           optional: true
-          secretName: argocd-repo-server-tls
-      - emptyDir: {}
-        name: plugins-home
+          items:
+          - key: tls.crt
+            path: tls.crt
+          - key: ca.crt
+            path: ca.crt
       {{- with .Values.server.initContainers }}
       initContainers:
         {{- toYaml . | nindent 6 }}
