--- a/charts/argo-cd/templates/argocd-server/clusterrole.yaml
+++ b/charts/argo-cd/templates/argocd-server/clusterrole.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ template "argo-cd.server.fullname" . }}
+  name: {{ include "argo-cd.server.fullname" . }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.server.name "name" .Values.server.name) | nindent 4 }}
 rules:
@@ -29,10 +29,18 @@ rules:
       - get
   {{- if eq (index (coalesce .Values.server.config .Values.configs.cm) "exec.enabled") "true" }}
   - apiGroups:
-    - ""
+      - ""
     resources:
-    - pods/exec
+      - pods/exec
     verbs:
-    - create
+      - create
   {{- end }}
+  - apiGroups:
+      - argoproj.io
+    resources:
+      - applications
+    verbs:
+      - get
+      - list
+      - watch
 {{- end }}
